--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@metamask/sdk": "^0.14.1",
     "@metamask/sdk-react": "^0.14.1",
     "@mui/material": "^5.14.18",
-    "ethers": "^5.4.0",
+    "@web3-react/abstract-connector": "^6.0.7",
+    "@web3-react/core": "^8.2.3",
+    "ethers": "^5.7.2",
     "formic": "^0.0.10",
     "formik": "^2.4.5",
     "n": "^9.2.0",
