--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "solc": "^0.8.0"
+    "solc": "^0.8.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^5.0.0",
