--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@metamask/sdk": "^0.14.1",
     "@metamask/sdk-react": "^0.14.1",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.18",
     "@web3-react/abstract-connector": "^6.0.7",
     "@web3-react/core": "^8.2.3",
